2017-06-21  Richard Biener  <rguenther@suse.de>

PR tree-optimization/81500
	* tree-vect-loop.c (vect_is_simple_reduction): Properly fail if
	we didn't identify a reduction path.

	* gcc.dg/torture/pr81500.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@250423 138bc75d-0d04-0410-961f-82ee72b054a4